# AI-Simple-Harness-Agentic-Framework

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
src/agent_sdk/: __init__.py  agent.py  base_model.py  builtin_tools.py  messages.py  openai_model.py  policy.py  protocols.py  tools.py  tracer.py  types.py
src/context_layer/: context_policy.py  manager.py  tokenizer.py
src/core/: __init__.py  langfuse_tracer.py  structured_tracer.py  summarizer.py  summarizing_manager.py
src/core/integrations/: openwebui_adapter.py  openwebui_pipe.py
src/core/observability/: .env.langfuse.example  docker-compose.langfuse.yml
src/core/openwebui/: docker-compose.openwebui.yml
src/demos/: demo.py  demo_context.py  demo_core.py  demo_langfuse.py  demo_policy_gate.py  demo_run_command.py
src/demos/resources/: TheLittlePrince.txt  sample.txt
src/tests/: test_agent.py  test_assembly_hook.py  test_base_model.py  test_builtin_tools.py  test_context_item.py  test_langfuse_tracer.py  test_messages.py  test_openai_model.py  test_openwebui_adapter.py  test_policy.py  test_render_seam.py  test_select.py  test_structured_tracer.py  test_summarizer.py  test_summarizing_manager.py  test_tokenizer.py  test_tool_policy_gate.py  test_tools.py  test_tracer.py  test_types.py
