[project]
name = "harness-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langfuse>=4.7.1",
    "openai>=1.0",
    "pydantic>=2",
    "tiktoken>=0.5",
]

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
